tests/snapshots/examples_fixtures/Modules__Main.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/Modules/Main.flx
== compile ==
failed (module)
== diagnostics ==
error[E024]: Module Path Mismatch

Module name `Modules.Main` doesn't match file path `examples/Modules/Main.flx`.

  examples/Modules/Main.flx:6:1
  |
6 | module Modules.Main {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
